--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
-    "express": "~4.13.4",
+    "express": "^4.13.4",
     "ioredis": "^2.3.0",
     "jade": "~1.11.0",
     "log4js": "^0.6.38",
@@ -19,6 +19,8 @@
     "sails-mysql": "^0.11.5",
     "serve-favicon": "~2.3.0",
     "supervisor": "^0.11.0",
-    "waterline": "^0.12.2"
+    "waterline": "^0.12.2",
+    "jsonwebtoken": "^7.1.9",
+    "express-session": "^1.14.1"
   }
 }
